# excalidraw-renderer

./: .gitignore  README.md  example_drawing.json  main.py  package-lock.json  package.json  pyproject.toml
app/: globals.css  layout.tsx  page.tsx
app/api/render/: route.ts
examples/: example2.json  example3.json
examples_mermaid/: classdiagram.mmd  flowchart.mmd  sequence.mmd
excalidraw_dsl/: __init__.py  arrows.py  compiler.py  model.py  pyproject.toml  render.py  renderer.py  shapes.py  state.py  styles.py  text.py  types.py
excalidraw_dsl/excalidraw_dsl/: __init__.py  compiler.py  text.py
excalidraw_dsl/src/excalidraw_dsl/: arrows.py  renderer.py  state.py  types.py
excalidraw_dsl/tests/: render_expect.json  test_render_expect.approved.txt  test_render_expect.py
excalidraw_renderer/: __init__.py  client.py
scripts/: render_png.py
server/: package-lock.json  package.json
server/app/api/render/: route.ts
server/app/api/render-mermaid/: route.ts
