[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excalidraw-dsl"
version = "0.1.0"
description = "Minimal DSL renderer for Excalidraw scenes."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Excalidraw DSL" }]
keywords = ["excalidraw", "dsl", "render"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "expect-def>=0.0.7"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["excalidraw_dsl*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
